--- a/16. Project2_Book List/preparing_UI.html
+++ b/16. Project2_Book List/preparing_UI.html
@@ -59,7 +59,7 @@
             </tbody>
         </table>
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
